Fix small font size and spacing responsiveness

--- a/styles/css/list.css
+++ b/styles/css/list.css
@@ -30,6 +30,12 @@ main {
   padding: 1rem;
   align-items: center;
 }
+@media (max-width: 1000px) {
+  .main-content .songtable .row,
+.main-content .songtable .header {
+    grid-template-columns: 2em 5rem 1fr 1fr 1.5em 2em;
+  }
+}
 .main-content .songtable.in-album .row,
 .main-content .songtable.in-album .header {
   grid-template-columns: 2em 1fr 1.5em 3em;
